FIX, Add visibility property to style.sass to prevent sites like reddit from hiding the ui

--- a/style.sass
+++ b/style.sass
@@ -11,6 +11,7 @@
   --bezier-symmetric-inverted: cubic-bezier(0, .7, 1, 0.25)
   --bezier-symmetric-hard: cubic-bezier(.5, .1, .5, .9)
   --bezier-symmetric-hard-inverted: cubic-bezier(.1, .5, .9, .5)
+  visibility: visible
 
 @tailwind base
 @tailwind components
